[project]
name = "python_template"
version = "0.1.0"
description = "A simple FastAPI Python template"
readme = "README.md"
authors = []

requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic>=2.10.6",
    "swagger-ui>=0.1.2",
    "uvicorn[standard]>=0.34.0",
    "waitress>=3.0.2",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
python_template = "python_template.main:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.6.0",
    "flake8>=6.0.0",
    "black>=23.10.0",
    "pytest>=7.3.1",
    "hatchling",
    "types-waitress",
]
test = [
    "mypy>=1.6.0",
    "flake8>=6.0.0",
    "black>=23.10.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "bandit>=1.8.3"
]

[tool.hatch.build]
artifact-name = "python_template-{version}"
packages = ["src/python_template"]

[tool.hatch.build.targets.sdist]
include = [
    "src/python_template/templates/hello.html",
    "tests",
]

[tool.hatch.envs.default]
dependencies = [
    "mypy>=1.6.0",
    "flake8>=6.0.0",
    "black>=23.10.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "types-waitress",
]
[tool.hatch.envs.default.scripts]
test = "pytest --cov=. --cov-report=xml:coverage-reports/coverage-pytest.xml --cov-report=term-missing:skip-covered --cov-fail-under=50"
lint = "flake8 src tests && mypy src tests"
format = "black src tests pyproject.toml"
run = "uvicorn python_template:app --reload"
clean = "rm -rf .coverage .pytest_cache dist build"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
minversion = "6.0"
addopts = "-ra -q"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.11"
show_error_codes = true
pretty = true
strict = true

[tool.coverage.run]
branch = true
source = ["src/python_template"]
omit = ["src/python_template/templates/*"]

[tool.coverage.paths]
source = ["src/python_template"]